# thanakan

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTION_LOG.md  LICENSE.md  LICENSE_EE.md  README.md  index.html  mise.toml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: docs.yml  publish.yml  test.yml
cli/: index.html
cli/accounting/: index.html
cli/mail/: index.html
cli/qr/: index.html
cli/statement/: index.html
docs/: getting-started.md  index.md
docs/cli/: accounting.md  index.md  mail.md  qr.md  statement.md
docs/libraries/: index.md  thanakan-accounting.md  thanakan-mail.md  thanakan-oauth.md  thanakan-qr.md  thanakan-statement.md
docs/overrides/: main.html
getting-started/: index.html
libraries/: index.html
libraries/thanakan-accounting/: index.html
libraries/thanakan-mail/: index.html
libraries/thanakan-oauth/: index.html
libraries/thanakan-qr/: index.html
libraries/thanakan-statement/: index.html
overrides/: main.html
search/: search_index.json
src/thanakan/: __init__.py  cli.py  cli_accounting.py  cli_mail.py  cli_statement.py
