[project]
name = "thanakan"
version = "0.1.0"
description = "Thai bank utilities monorepo"
readme = "README.md"
authors = [
    { name = "ben", email = "me@nutchanon.org" }
]
requires-python = ">=3.10"
dependencies = [
    "thanakan-qr",
    "thanakan-oauth",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
thanakan-qr = { workspace = true }
thanakan-oauth = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
