[project]
name = "thanakan"
version = "2.0.0"
description = "Thai bank utilities - QR slip parser & bank API clients"
readme = "README.md"
authors = [
    { name = "ben", email = "me@nutchanon.org" }
]
requires-python = ">=3.10"
dependencies = [
    "thanakan-qr",
    "thanakan-oauth",
    "typer>=0.9",
]

[project.scripts]
thanakan = "thanakan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
thanakan-qr = { workspace = true }
thanakan-oauth = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
