[project]
name = "thanakan"
version = "2.1.0"
description = "Thai bank utilities - QR slip parser & bank API clients"
readme = "README.md"
authors = [
    { name = "ben", email = "me@nutchanon.org" }
]
requires-python = ">=3.10"
license = "Sustainable Use License"
license-files = ["LICENSE.md", "LICENSE_EE.md"]
dependencies = [
    "thanakan-qr",
    "thanakan-oauth",
    "thanakan-statement",
    "thanakan-mail",
    "thanakan-accounting",
    "typer>=0.9",
    "questionary>=2.0",
]

[project.scripts]
thanakan = "thanakan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
thanakan-qr = { workspace = true }
thanakan-oauth = { workspace = true }
thanakan-statement = { workspace = true }
thanakan-mail = { workspace = true }
thanakan-accounting = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
